--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   "type": "module",
   "private": true,
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
     "solid-start-vercel": "^0.2.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.8.3",
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "@solid-primitives/upload": "^0.0.111",
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.5.0",
+    "node-ical": "^0.16.0",
     "solid-js": "^1.6.0",
     "solid-start": "^0.2.0",
     "undici": "^5.11.0"
